# pcsc-tools

./: .gitignore  ATR_analysis  ATR_analysis.1p  ATR_analysis.1p.in  ATR_analysis.in  MANIFEST  Makefile  Makefile.am  README  README.md  bad_atr.txt  c-mac.sh  c-window.sh  config.h.in~  configure.ac  configure.ac~  create_distrib.sh  fast.sh  gscriptor  gscriptor.1  gscriptor.1p  gscriptor.desktop  gscriptor.desktop.in  gscriptor.gtk1.2  log  meson.build  meson.options  pcsc_scan.1  pcsc_scan.c  pcsc_scan.c.ok  scriptor  scriptor.1  scriptor.1p  smartcard_list.txt  smartcard_list.txt.old  sort_smartcard_list.py  strip.sh  sync.sh  tags  test.script
.github/workflows/: build.yml  build_meson.yml  macos.yml  macos_meson.yml  windows.yml  windows_meson.yml
pcsc-tools/rel-1_2_1/: ATR_analysis
pcsc-tools/rel-1_2_2/: ATR_analysis
pcsc-tools/rel-1_2_3/: Makefile  pcsc_scan.c
pcsc-tools/rel-1_2_4/: ATR_analysis  gscriptor  smartcard_list.txt
pcsc-tools/rel-1_2_5/: smartcard_list.txt
pcsc-tools/rel-1_3_0/: Makefile
pcsc-tools/rel-1_3_2/: README  gscriptor  pcsc_scan.c
pcsc-tools/rel-1_3_4/: MANIFEST  pcsc_scan.c  scriptor
pcsc-tools/rel-1_4_0/: ATR_analysis.1p  README
pcsc-tools/rel-1_4_1/: ATR_analysis  MANIFEST  smartcard_list.txt
pcsc-tools/rel-1_4_11/: README  pcsc_scan.c
pcsc-tools/rel-1_4_12/: create_distrib.sh
pcsc-tools/rel-1_4_13/: README  smartcard_list.txt
pcsc-tools/rel-1_4_14/: ATR_analysis  ATR_analysis.1p  scriptor
pcsc-tools/rel-1_4_15/: README  pcsc_scan.c
pcsc-tools/rel-1_4_2/: README  pcsc_scan.c  smartcard_list.txt
pcsc-tools/rel-1_4_3/: README
pcsc-tools/rel-1_4_5/: smartcard_list.txt
pcsc-tools/rel-1_4_7/: gscriptor  smartcard_list.txt
pcsc-tools/rel-1_4_9/: README  pcsc_scan.c
pcsc-tools/rel_1-0-1/: MANIFEST  TODO
pcsc-tools/rel_1-0-2/: MANIFEST  Makefile  README  pcsc_scan.1  scriptor
pcsc-tools/rel_1-0-3/: Makefile  README  pcsc_scan.c
pcsc-tools/rel_1-0-7/: test.script
pcsc-tools/rel_1_1_0/: ATR_analysis  ATR_analysis.1p  MANIFEST  README  scriptor.1p
po/: Makefile.am  Makefile.intl  PACKAGE  POTFILES  fr.po  ka.po  pcsc-tools.pot  ru.gmo  ru.po
tags/README/: pcsc_scan.c  smartcard_list.txt
tags/rel-1_2_1/: README
tags/rel-1_2_2/: README
tags/rel-1_2_4/: README
tags/rel-1_2_5/: README  gscriptor
tags/rel-1_3_0/: README  create_distrib.sh  smartcard_list.txt
tags/rel-1_3_1/: smartcard_list.txt
tags/rel-1_3_2/: scriptor
tags/rel-1_3_4/: gscriptor
tags/rel-1_4_0/: gscriptor.gtk1.2
tags/rel-1_4_1/: Makefile  pcsc_scan.c
tags/rel-1_4_15/: Makefile
tags/rel-1_4_2/: gscriptor  gscriptor.desktop
tags/rel-1_4_3/: scriptor
tags/rel-1_4_5/: README  gscriptor
tags/rel_1-0-1/: README
tags/rel_1-0-4/: README
tags/rel_1-0-7/: gscriptor
tags/rel_1_1_0/: Makefile
trunk/: ATR_analysis  ATR_analysis.1p  MANIFEST  Makefile  README  TODO  create_distrib.sh  gscriptor  pcsc_scan.1  pcsc_scan.c  scriptor  scriptor.1p  smartcard_list.txt  test.script
